//
//  AppFeatureString.swift
//  grocer_store
//
//  Created by Aswin Gopinathan on 24/02/23.
//

import Foundation

// Strings used by the App Section.
class AppFeatureString {
    
    // Header Section Strings
    static let explore = "Explore"
    static let filter = "Filter"
    static let search = "Search"
}
