...
        myTableView.delegate = self
        myTableView.register(ProductListingTableItem.self, forCellReuseIdentifier: ProductListingTableItem.identifer)
        myTableView.showsVerticalScrollIndicator = true
        myTableView.contentInset = UIEdgeInsets(top: 39,left: 0,bottom: 0,right: 0)
        myTableView.separatorStyle = .none
        myTableView.keyboardDismissMode = .onDrag
        myTableView.accessibilityIdentifier = "MainTableView"
    }
    
    // Setup the loader if the view state is "Loading"
    func setupLoader() {
        Task {
            if !self.refreshControl.isRefreshing {
...
        }
        storeResponse = storeResponse.filter { item in
            return item.price?.lowercased().contains(searchText.lowercased()) ?? false
        }
        
        if storeResponse.isEmpty {
            emptySearchResultView.view.accessibilityIdentifier = "EmptySearchResultView"
            myTableView.backgroundView = emptySearchResultView.view
        }
        myTableView.reloadData()
        
        sliderMasterStoreResponse = storeResponse

...
