...
        self.menuIcon.translatesAutoresizingMaskIntoConstraints = false
        self.menuIcon.image = UIImage(systemName: "line.3.horizontal")
        
        self.menuIcon.isUserInteractionEnabled = true
        let tapRecognizer = UITapGestureRecognizer(target:self,action:#selector(onMenuTap))
        self.menuIcon.addGestureRecognizer(tapRecognizer)
        self.menuIcon.accessibilityIdentifier = "MenuIcon"
    }
    
    // MARK: Setup SearchBar
    // Setup the Search Bar
    private func setupSearchBar() {
        searchBar.frame = CGRect(x: 0, y: 0, width: self.view.frame.size.width, height: 0)
...
