...
        collectionview.bounces = true
        collectionview.alwaysBounceVertical = true
        collectionview.frame = CGRect(x: 0, y: 153, width: self.view.frame.size.width, height: self.view.frame.size.height - 153)
        collectionview.contentInset = UIEdgeInsets(top: 39, left: 32, bottom: 0, right: 60)
        collectionview.keyboardDismissMode = .onDrag
        collectionview.addSubview(refreshControl)
        collectionview.accessibilityIdentifier = "MainCollectionView"
    }
    
    // Setup the RefreshController to be used for swipe-down-to-refresh
    func setupRefreshController() {
        refreshControl.attributedTitle = NSAttributedString(string: AppString.refreshText)
        refreshControl.addTarget(self, action: #selector(self.refresh), for: .valueChanged)
...
